--- a/main.css
+++ b/main.css
@@ -7,8 +7,7 @@
 
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  line-height: 20;
-  color: lightgrey;
+  line-height: 3.75rem;
   background-color: #f5f5f5;
   padding: 20px;
 }
